--- a/Seccion02/app/src/main/res/layout/activity_main.xml
+++ b/Seccion02/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,5 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:layout_height="match_parent" />
 </RelativeLayout>
