--- a/Seccion02/app/src/main/res/menu/action_bar_menu.xml
+++ b/Seccion02/app/src/main/res/menu/action_bar_menu.xml
@@ -4,7 +4,17 @@
 
     <item
         android:id="@+id/agregar_item"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@android:drawable/ic_input_add"
         android:title="Agregar Item"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/vistaLista"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:title="Ver Lista"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/vistaGrid"
+        android:icon="@android:drawable/ic_dialog_dialer"
+        android:title="Ver Grilla"
+        app:showAsAction="always" />
 </menu>
