--- a/Seccion02/app/src/main/res/layout/grid_item.xml
+++ b/Seccion02/app/src/main/res/layout/grid_item.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/imagenFruta2"
+        android:id="@+id/imagenFruta"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center_vertical"
@@ -17,26 +17,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/descripcionFruta2"
+        android:id="@+id/descripcionFruta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="4dp"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tituloFruta2" />
+        app:layout_constraintTop_toBottomOf="@+id/tituloFruta" />
 
     <TextView
-        android:id="@+id/tituloFruta2"
+        android:id="@+id/tituloFruta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="12dp"
         android:text="TextView"
-        android:textStyle="italic"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagenFruta2" />
+        app:layout_constraintTop_toBottomOf="@+id/imagenFruta" />
 </android.support.constraint.ConstraintLayout>
