--- a/Seccion02/app/src/main/res/layout/item_lista.xml
+++ b/Seccion02/app/src/main/res/layout/item_lista.xml
@@ -39,7 +39,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
-        android:textStyle="italic"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
