--- a/Seccion04/app/src/main/res/layout/activity_main.xml
+++ b/Seccion04/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
-	<android.support.v7.widget.CardView
-		android:id="@+id/cardView"
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
-		android:layout_height="240dp"
-		android:layout_marginEnd="16dp"
-		android:layout_marginLeft="16dp"
-		android:layout_marginRight="16dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		app:cardBackgroundColor="#bde3e0"
-		app:cardCornerRadius="15dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent">
-
-		<android.support.constraint.ConstraintLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:clickable="true"
-			android:focusable="true"
-			android:foreground="?android:attr/selectableItemBackground">
-
-			<TextView
-				android:id="@+id/textViewDescripcion"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="8dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginLeft="8dp"
-				android:layout_marginRight="8dp"
-				android:layout_marginStart="8dp"
-				android:text="TextView"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent" />
-
-			<ImageView
-				android:id="@+id/imageView"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_marginBottom="32dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginLeft="8dp"
-				android:layout_marginRight="8dp"
-				android:layout_marginStart="8dp"
-				android:layout_marginTop="8dp"
-				android:scaleType="fitXY"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:srcCompat="@drawable/arboles" />
-		</android.support.constraint.ConstraintLayout>
-	</android.support.v7.widget.CardView>
+		android:layout_height="match_parent"
+		tools:layout_editor_absoluteX="8dp"
+		tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
