--- a/Seccion04/app/src/main/res/layout/recycler_view_item.xml
+++ b/Seccion04/app/src/main/res/layout/recycler_view_item.xml
@@ -9,54 +9,44 @@
 	<android.support.v7.widget.CardView
 		android:id="@+id/cardView"
 		android:layout_width="match_parent"
-		android:layout_height="240dp"
-		android:layout_marginBottom="16dp"
-		android:layout_marginEnd="16dp"
-		android:layout_marginLeft="16dp"
-		android:layout_marginRight="16dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
+		android:layout_height="match_parent"
+		android:layout_marginBottom="8dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginRight="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
 		app:cardBackgroundColor="#bde3e0"
 		app:cardCornerRadius="15dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.0"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent">
 
 		<android.support.constraint.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:clickable="true"
-			android:focusable="true"
-			android:foreground="?android:attr/selectableItemBackground">
-
-			<TextView
-				android:id="@+id/textViewDescripcion"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="8dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginLeft="8dp"
-				android:layout_marginRight="8dp"
-				android:layout_marginStart="8dp"
-				android:layout_marginTop="8dp"
-				android:text="TextView"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@+id/imageView" />
+			android:layout_height="match_parent">
 
 			<ImageView
 				android:id="@+id/imageView"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:layout_marginBottom="32dp"
+				android:layout_marginBottom="24dp"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
 				app:srcCompat="@drawable/arboles" />
+
+			<TextView
+				android:id="@+id/textViewDescripcion"
+				android:layout_width="wrap_content"
+				android:layout_height="19dp"
+				android:text="TextView"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/imageView" />
 		</android.support.constraint.ConstraintLayout>
 	</android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
