--- a/Seccion04/app/src/main/res/layout/recycler_view_item.xml
+++ b/Seccion04/app/src/main/res/layout/recycler_view_item.xml
@@ -30,9 +30,7 @@
 			<ImageView
 				android:id="@+id/imageView"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_marginBottom="24dp"
-				app:layout_constraintBottom_toBottomOf="parent"
+				android:layout_height="189dp"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
@@ -43,10 +41,19 @@
 				android:layout_width="wrap_content"
 				android:layout_height="19dp"
 				android:text="TextView"
-				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@+id/imageView" />
+				tools:layout_editor_absoluteY="211dp" />
+
+			<TextView
+				android:id="@+id/textViewTitulo"
+				android:layout_width="wrap_content"
+				android:layout_height="19dp"
+				android:text="TextView"
+				android:textStyle="bold"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				tools:layout_editor_absoluteY="192dp" />
 		</android.support.constraint.ConstraintLayout>
 	</android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
