--- a/Seccion04/app/src/main/res/layout/recycler_view_item.xml
+++ b/Seccion04/app/src/main/res/layout/recycler_view_item.xml
@@ -3,7 +3,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="250dp"
+	android:layout_height="115dp"
 	tools:layout_editor_absoluteY="81dp">
 
 	<android.support.v7.widget.CardView
@@ -27,11 +27,24 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent">
 
+			<TextView
+				android:id="@+id/textViewCantidad"
+				android:layout_width="wrap_content"
+				android:layout_height="19dp"
+				android:layout_marginBottom="8dp"
+				android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp"
+				android:text="TextView"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent" />
+
 			<ImageView
 				android:id="@+id/imageView"
-				android:layout_width="match_parent"
-				android:layout_height="189dp"
-				app:layout_constraintEnd_toEndOf="parent"
+				android:layout_width="80dp"
+				android:layout_height="80dp"
+				android:layout_marginLeft="8dp"
+				android:layout_marginStart="8dp"
+				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
 				app:srcCompat="@drawable/arboles" />
@@ -40,20 +53,27 @@
 				android:id="@+id/textViewDescripcion"
 				android:layout_width="wrap_content"
 				android:layout_height="19dp"
+				android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp"
+				android:layout_marginTop="8dp"
 				android:text="TextView"
 				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				tools:layout_editor_absoluteY="211dp" />
+				app:layout_constraintStart_toEndOf="@+id/imageView"
+				app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />
 
 			<TextView
 				android:id="@+id/textViewTitulo"
 				android:layout_width="wrap_content"
 				android:layout_height="19dp"
+				android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp"
+				android:layout_marginTop="24dp"
 				android:text="TextView"
 				android:textStyle="bold"
 				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				tools:layout_editor_absoluteY="192dp" />
+				app:layout_constraintHorizontal_bias="0.504"
+				app:layout_constraintStart_toEndOf="@+id/imageView"
+				app:layout_constraintTop_toTopOf="parent" />
 		</android.support.constraint.ConstraintLayout>
 	</android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
