--- a/Seccion04/app/src/main/res/layout/recycler_view_item.xml
+++ b/Seccion04/app/src/main/res/layout/recycler_view_item.xml
@@ -23,57 +23,54 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent">
 
-		<android.support.constraint.ConstraintLayout
+		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent">
-
-			<TextView
-				android:id="@+id/textViewCantidad"
-				android:layout_width="wrap_content"
-				android:layout_height="19dp"
-				android:layout_marginBottom="8dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginRight="8dp"
-				android:text="TextView"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent" />
+			android:layout_height="match_parent"
+			android:orientation="horizontal">
 
 			<ImageView
 				android:id="@+id/imageView"
-				android:layout_width="80dp"
-				android:layout_height="80dp"
-				android:layout_marginLeft="8dp"
-				android:layout_marginStart="8dp"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_margin="8dp"
+				android:layout_weight="0.30"
 				app:srcCompat="@drawable/arboles" />
 
-			<TextView
-				android:id="@+id/textViewDescripcion"
-				android:layout_width="wrap_content"
-				android:layout_height="19dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginRight="8dp"
-				android:layout_marginTop="8dp"
-				android:text="TextView"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toEndOf="@+id/imageView"
-				app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />
+			<LinearLayout
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="0.70"
+				android:orientation="vertical">
 
-			<TextView
-				android:id="@+id/textViewTitulo"
-				android:layout_width="wrap_content"
-				android:layout_height="19dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginRight="8dp"
-				android:layout_marginTop="24dp"
-				android:text="TextView"
-				android:textStyle="bold"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintHorizontal_bias="0.504"
-				app:layout_constraintStart_toEndOf="@+id/imageView"
-				app:layout_constraintTop_toTopOf="parent" />
-		</android.support.constraint.ConstraintLayout>
+				<TextView
+					android:id="@+id/textViewTitulo"
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_gravity="center"
+					android:layout_weight="0.3"
+					android:gravity="center"
+					android:text="Titulo"
+					android:textStyle="bold" />
+
+				<TextView
+					android:id="@+id/textViewDescripcion"
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_gravity="center"
+					android:layout_weight="0.5"
+					android:gravity="center"
+					android:text="Descripcion" />
+
+				<TextView
+					android:id="@+id/textViewCantidad"
+					android:layout_width="wrap_content"
+					android:layout_height="0dp"
+					android:layout_gravity="right"
+					android:layout_marginRight="8dp"
+					android:layout_weight="0.2"
+					android:gravity="center"
+					android:text="0" />
+			</LinearLayout>
+		</LinearLayout>
 	</android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
