--- a/Seccion04v2/app/src/main/res/layout/activity_main.xml
+++ b/Seccion04v2/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,18 @@
 		android:id="@+id/fabAdd"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginEnd="16dp"
+		android:layout_marginRight="16dp"
+		android:layout_marginBottom="16dp"
 		android:clickable="true"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:srcCompat="@mipmap/ic_add_foreground" />
 
 	<ListView
+		android:id="@+id/lvLista"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:layout_editor_absoluteX="0dp"
-		tools:layout_editor_absoluteY="47dp"></ListView>
+		tools:layout_editor_absoluteY="0dp"></ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
