--- a/Seccion04v2/app/src/main/res/layout/activity_main.xml
+++ b/Seccion04v2/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,20 @@
 	tools:context=".activities.MainActivity">
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/fabAdd"
+		android:id="@+id/fabCrear"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="16dp"
 		android:layout_marginRight="16dp"
 		android:layout_marginBottom="16dp"
 		android:clickable="true"
+		android:onClick="crearTableroClick"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:srcCompat="@mipmap/ic_add_foreground" />
 
 	<ListView
-		android:id="@+id/lvLista"
+		android:id="@+id/lvTableros"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:layout_editor_absoluteX="0dp"
