--- a/Seccion04v2/app/src/main/res/layout/list_view_item_tablero.xml
+++ b/Seccion04v2/app/src/main/res/layout/list_view_item_tablero.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
@@ -9,8 +9,7 @@ tools:context=".activities.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="500px"
-        android:background="#BCEFFF">
+        android:layout_height="400px">
 
 
         <TextView
@@ -45,4 +44,4 @@ tools:context=".activities.MainActivity">
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
