--- a/Seccion04v2/app/src/main/res/layout/list_view_item_nota.xml
+++ b/Seccion04v2/app/src/main/res/layout/list_view_item_nota.xml
@@ -9,20 +9,23 @@ tools:context=".activities.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="400px">
+        android:layout_height="250px">
 
 
         <TextView
-            android:id="@+id/tvTableroTitulo"
+            android:id="@+id/tvNotaDescripcion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
             android:text="TextView"
             android:textSize="30sp"
-            tools:layout_editor_absoluteX="24dp"
-            tools:layout_editor_absoluteY="28dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvTableroFecha"
+            android:id="@+id/tvNotaFecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -32,16 +35,6 @@ tools:context=".activities.MainActivity">
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/tvTableroNotas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
