--- a/Seccion04v2/app/src/main/res/layout/popup_alta_tablero.xml
+++ b/Seccion04v2/app/src/main/res/layout/popup_alta_tablero.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/etTitulo"
+        android:id="@+id/etTableroTitulo"
         android:layout_width="253dp"
         android:layout_height="47dp"
         android:ems="10"
