--- a/Seccion04_Ciudades/app/src/main/res/layout/list_view_item_ciudad.xml
+++ b/Seccion04_Ciudades/app/src/main/res/layout/list_view_item_ciudad.xml
@@ -23,8 +23,19 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent">
 
+				<TextView
+					android:id="@+id/tvCiudadCantidadEstrellas"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="8dp"
+					android:layout_marginLeft="8dp"
+					android:layout_marginBottom="8dp"
+					android:text="5"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toEndOf="@+id/imageView2" />
+
 				<ImageView
-					android:id="@+id/imageView"
+					android:id="@+id/ivCiudadImagen"
 					android:layout_width="match_parent"
 					android:layout_height="156dp"
 					app:layout_constraintTop_toTopOf="parent"
@@ -34,9 +45,9 @@
 					android:id="@+id/imageView2"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginBottom="8dp"
-					android:layout_marginLeft="16dp"
 					android:layout_marginStart="16dp"
+					android:layout_marginLeft="16dp"
+					android:layout_marginBottom="8dp"
 					android:src="@android:drawable/btn_star_big_on"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintStart_toStartOf="parent" />
@@ -45,33 +56,33 @@
 					android:id="@+id/tvEliminarCiudad"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginBottom="8dp"
 					android:layout_marginEnd="8dp"
 					android:layout_marginRight="8dp"
+					android:layout_marginBottom="8dp"
 					android:text="Eliminar"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent" />
 
 				<TextView
-					android:id="@+id/tvImagenDescripcion"
+					android:id="@+id/tvCiudadDescripcion"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginLeft="16dp"
 					android:layout_marginStart="16dp"
+					android:layout_marginLeft="16dp"
 					android:layout_marginTop="8dp"
-					android:text="TextView"
+					android:text="Descripcion"
 					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toBottomOf="@+id/imageView" />
+					app:layout_constraintTop_toBottomOf="@+id/ivCiudadImagen" />
 
 				<TextView
-					android:id="@+id/tvImagenNombre"
+					android:id="@+id/tvCiudadNombre"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginBottom="8dp"
-					android:layout_marginLeft="16dp"
 					android:layout_marginStart="16dp"
-					android:text="TextView"
-					app:layout_constraintBottom_toBottomOf="@+id/imageView"
+					android:layout_marginLeft="16dp"
+					android:layout_marginBottom="8dp"
+					android:text="Nombre"
+					app:layout_constraintBottom_toBottomOf="@+id/ivCiudadImagen"
 					app:layout_constraintStart_toStartOf="parent" />
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
