--- a/Seccion04_Ciudades/app/src/main/res/layout/activity_main.xml
+++ b/Seccion04_Ciudades/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,23 @@
 	android:layout_height="match_parent"
 	tools:context=".activities.MainActivity">
 
-	<ListView
-		android:id="@+id/lvCiudades"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:layout_editor_absoluteX="0dp"
-		tools:layout_editor_absoluteY="0dp"></ListView>
-
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/btAgregarCiudad"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginRight="16dp"
 		android:clickable="true"
-		android:onClick="irAcrearCiudadClick"
+		android:onClick="irAGuardarCiudadClick"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:srcCompat="@android:drawable/ic_menu_add" />
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/rvListadoCiudades"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:layout_editor_absoluteX="172dp"
+		tools:layout_editor_absoluteY="180dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
