--- a/Seccion04_Ciudades/app/src/main/res/layout/activity_main.xml
+++ b/Seccion04_Ciudades/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
 		android:id="@+id/btAgregarCiudad"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginRight="16dp"
+		android:layout_marginBottom="16dp"
 		android:clickable="true"
 		android:onClick="irAGuardarCiudadClick"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:srcCompat="@android:drawable/ic_menu_add" />
+		app:srcCompat="@drawable/ic_iconfinder_add" />
 
 	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/rvListadoCiudades"
