--- a/Seccion04_Ciudades/app/src/main/res/layout/list_view_item_ciudad.xml
+++ b/Seccion04_Ciudades/app/src/main/res/layout/list_view_item_ciudad.xml
@@ -3,99 +3,105 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="800px"
 	android:orientation="vertical"
 	tools:context=".activities.MainActivity">
 
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
-		android:layout_height="600px">
+		android:layout_height="match_parent"
+		android:layout_marginStart="8dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginRight="8dp"
+		app:cardBackgroundColor="#03A9F4"
+		app:cardCornerRadius="10dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
 
-		<androidx.cardview.widget.CardView
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_marginBottom="8dp"
-			app:cardBackgroundColor="#03A9F4"
-			app:cardCornerRadius="10dp"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
+			android:layout_height="match_parent">
 
-			<androidx.constraintlayout.widget.ConstraintLayout
+			<View
+				android:id="@+id/view"
+				android:layout_width="wrap_content"
+				android:layout_height="1dp"
+				android:layout_marginBottom="50dp"
+				android:background="#525252"
+				app:layout_constraintBottom_toBottomOf="parent" />
+
+			<ImageView
+				android:id="@+id/ivCiudadImagen"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent">
+				android:layout_height="156dp"
+				android:scaleType="fitXY"
+				app:layout_constraintTop_toTopOf="parent"
+				tools:src="@tools:sample/avatars" />
 
-				<View
-					android:id="@+id/view"
-					android:layout_width="wrap_content"
-					android:layout_height="3dp"
-					android:layout_marginBottom="24dp"
-					android:background="#525252"
-					app:layout_constraintBottom_toBottomOf="parent" />
+			<ImageView
+				android:id="@+id/imageView2"
+				android:layout_width="20dp"
+				android:layout_height="20dp"
+				android:layout_marginStart="16dp"
+				android:layout_marginLeft="16dp"
+				android:layout_marginBottom="8dp"
+				android:src="@drawable/ic_iconfinder_star"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent" />
 
-				<ImageView
-					android:id="@+id/ivCiudadImagen"
-					android:layout_width="match_parent"
-					android:layout_height="156dp"
-					app:layout_constraintTop_toTopOf="parent"
-					tools:src="@tools:sample/avatars" />
+			<TextView
+				android:id="@+id/tvCiudadCantidadEstrellas"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="8dp"
+				android:layout_marginLeft="8dp"
+				android:layout_marginBottom="8dp"
+				android:text="5"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toEndOf="@+id/imageView2" />
 
-				<ImageView
-					android:id="@+id/imageView2"
-					android:layout_width="15dp"
-					android:layout_height="15dp"
-					android:layout_marginBottom="8dp"
-					android:layout_marginLeft="16dp"
-					android:layout_marginStart="16dp"
-					android:src="@android:drawable/btn_star_big_on"
-					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintStart_toStartOf="parent" />
+			<TextView
+				android:id="@+id/tvCiudadDescripcion"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="8dp"
+				android:layout_marginLeft="8dp"
+				android:layout_marginTop="8dp"
+				android:text="Descripcion"
+				android:textColor="#FFFFFF"
+				android:textStyle="bold|italic"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/ivCiudadImagen" />
 
-				<TextView
-					android:id="@+id/tvCiudadCantidadEstrellas"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="8dp"
-					android:layout_marginLeft="8dp"
-					android:layout_marginStart="8dp"
-					android:text="5"
-					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintStart_toEndOf="@+id/imageView2" />
+			<TextView
+				android:id="@+id/tvCiudadNombre"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="8dp"
+				android:layout_marginLeft="8dp"
+				android:layout_marginBottom="0dp"
+				android:text="Nombre"
+				android:textColor="#FFFFFF"
+				android:textSize="18sp"
+				android:textStyle="bold"
+				app:layout_constraintBottom_toBottomOf="@+id/ivCiudadImagen"
+				app:layout_constraintStart_toStartOf="parent" />
 
-				<TextView
-					android:id="@+id/tvCiudadDescripcion"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="16dp"
-					android:layout_marginStart="16dp"
-					android:layout_marginTop="8dp"
-					android:text="Descripcion"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toBottomOf="@+id/ivCiudadImagen" />
-
-				<TextView
-					android:id="@+id/tvCiudadNombre"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="8dp"
-					android:layout_marginLeft="16dp"
-					android:layout_marginStart="16dp"
-					android:text="Nombre"
-					app:layout_constraintBottom_toBottomOf="@+id/ivCiudadImagen"
-					app:layout_constraintStart_toStartOf="parent" />
-
-				<Button
-					android:id="@+id/btEliminarCiudad"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="8dp"
-					android:layout_marginEnd="8dp"
-					android:layout_marginRight="8dp"
-					android:text="Eliminar"
-					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintEnd_toEndOf="parent" />
-			</androidx.constraintlayout.widget.ConstraintLayout>
-		</androidx.cardview.widget.CardView>
-	</androidx.constraintlayout.widget.ConstraintLayout>
+			<Button
+				android:id="@+id/btEliminarCiudad"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp"
+				android:background="@android:color/transparent"
+				android:text="Eliminar"
+				android:textColor="#3C3C3C"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent" />
+		</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
