--- a/Seccion08_SplashScreen/app/src/main/res/layout/activity_login.xml
+++ b/Seccion08_SplashScreen/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Login">
+	tools:context=".LoginActivity">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:id="@+id/constraintLayout"
@@ -12,7 +12,7 @@
 		android:layout_height="wrap_content"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		tools:context=".Login">
+		tools:context=".LoginActivity">
 
 		<EditText
 			android:id="@+id/etEmail"
