--- a/Seccion09_fragment/app/src/main/res/layout/fragment_detalle.xml
+++ b/Seccion09_fragment/app/src/main/res/layout/fragment_detalle.xml
@@ -2,10 +2,10 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="Fragments.DataFragment">
+	tools:context="Fragments.DetalleFragment">
 	<!-- TODO: Update blank fragment layout -->
 	<TextView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:text="fragmento dataaa" />
+		android:text="Fragmento detalle" />
 </FrameLayout>
