--- a/Seccion09_fragment/app/src/main/res/layout/activity_main.xml
+++ b/Seccion09_fragment/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,25 @@
 	android:layout_height="match_parent"
 	tools:context="Activities.MainActivity">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<fragment
+			android:id="@+id/fg_data"
+			android:name="Fragments.DataFragment"
+			android:layout_width="match_parent"
+			android:layout_height="500px"
+			android:layout_weight="1"
+			tools:layout="@layout/fragment_data" />
+
+		<fragment
+			android:id="@+id/fg_detalle"
+			android:name="Fragments.DataFragment"
+			android:layout_width="match_parent"
+			android:layout_height="500px"
+			android:layout_weight="1"
+			tools:layout="@layout/fragment_detalle" />
+	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
