--- a/Seccion09_fragment/app/src/main/res/layout/activity_main.xml
+++ b/Seccion09_fragment/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -21,7 +20,7 @@
 
 		<fragment
 			android:id="@+id/fg_detalle"
-			android:name="Fragments.DataFragment"
+			android:name="Fragments.DetalleFragment"
 			android:layout_width="match_parent"
 			android:layout_height="500px"
 			android:layout_weight="1"
