--- a/Seccion09_fragment/app/src/main/res/layout/fragment_detalle.xml
+++ b/Seccion09_fragment/app/src/main/res/layout/fragment_detalle.xml
@@ -1,11 +1,22 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context="Fragments.DetalleFragment">
 	<!-- TODO: Update blank fragment layout -->
-	<TextView
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="Fragmento detalle" />
+		android:layout_height="match_parent">
+
+		<TextView
+			android:id="@+id/tvTexto"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="32dp"
+			android:text="TextView"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
