--- a/Seccion10_tabs_tarea/app/src/main/res/layout/fragment_list.xml
+++ b/Seccion10_tabs_tarea/app/src/main/res/layout/fragment_list.xml
@@ -4,9 +4,9 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".Fragments.ListFragment">
-	<!-- TODO: Update blank fragment layout -->
-	<TextView
+
+	<ListView
+		android:id="@+id/lvPersonas"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment" />
+		android:layout_height="match_parent" />
 </FrameLayout>
