--- a/BotoneraForgottera/app/src/main/res/layout/fragment_stickers.xml
+++ b/BotoneraForgottera/app/src/main/res/layout/fragment_stickers.xml
@@ -4,12 +4,12 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Fragments.AlertFragment">
+	tools:context=".Fragments.StickersFragment">
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="INFO"
+		android:text="Proximamente gordito..."
 		android:textSize="30sp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
