se realiza listado de tags

--- a/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
+++ b/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
@@ -6,7 +6,7 @@
 	tools:context=".Fragments.StickersFragment">
 
 	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/rvListadoCiudades"
+		android:id="@+id/rvListadoAudios"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:layout_editor_absoluteX="0dp"
