--- a/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
+++ b/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
@@ -4,8 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="500px"
-	android:orientation="vertical"
-	tools:context=".activities.MainActivity">
+	android:orientation="vertical">
 
 	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
@@ -65,6 +64,14 @@
 				android:textStyle="bold"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent" />
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/rvListadoTags"
+				android:layout_width="match_parent"
+				android:layout_height="95dp"
+				app:layout_constraintBottom_toTopOf="@+id/view"
+				app:layout_constraintTop_toBottomOf="@+id/tvCiudadDescripcion"
+				tools:layout_editor_absoluteX="-7dp" />
 
 			<Button
 				android:id="@+id/btPlay"
