--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_tags.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_tags.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="110px"
 	android:orientation="vertical">
 
-	<Button
+	<com.google.android.material.button.MaterialButton
 		android:id="@+id/btTag"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="tag" />
+		android:text="tag"
+		app:backgroundTint="@color/colorBotonTag"
+		app:iconPadding="0dp"
+		app:iconSize="40dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
