--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values-v21/style.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values-v21/style.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+	<style name="AppTheme" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
 		<!-- Customize your theme here. -->
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -12,7 +12,7 @@
 		<!--		<item name="android:windowTranslucentNavigation">true</item>-->
 		<!--		<item name="android:statusBarColor">@color/colorAccent</item>-->
 	</style>
-	<!--	wppppppppppppppppppppppppp-->
+	<!-- - - - - - - - - - - WhatsApp Stickers - - - - - - - - - - - -  -->
 	<style name="StickerPreviewButtonText" parent="Widget.MaterialComponents.Button.TextButton">
 		<item name="android:textColor">@android:color/white</item>
 		<item name="android:textSize">14sp</item>
@@ -42,5 +42,5 @@
 		<item name="android:clickable">true</item>
 		<item name="android:foreground">?android:attr/selectableItemBackground</item>
 	</style>
-	<!--	**************************************** -->
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 </resources>
