--- a/SayTheWord/app/src/main/res/layout/fragment_card_back.xml
+++ b/SayTheWord/app/src/main/res/layout/fragment_card_back.xml
@@ -8,6 +8,7 @@
 	tools:context=".Fragments.CardBack">
 	<!-- TODO: Update blank fragment layout -->
 	<TextView
+		android:id="@+id/tvTextoAtras"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="ATRAAAS!"
