--- a/SayTheWord/app/src/main/res/layout/fragment_card_front.xml
+++ b/SayTheWord/app/src/main/res/layout/fragment_card_front.xml
@@ -7,6 +7,7 @@
 	tools:context=".Fragments.CardFront">
 	<!-- TODO: Update blank fragment layout -->
 	<TextView
+		android:id="@+id/tvTextoAdelante"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:text="FRENTEEEEE!!" />
