--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values-v21/style.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values-v21/style.xml
@@ -5,8 +5,9 @@
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
-		<item name="android:windowDrawsSystemBarBackgrounds">true</item>
-		<item name="android:statusBarColor">@android:color/transparent</item>
+		<!--		Se quita estos dos por compatibilidad, por las dudas -->
+		<!--		<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+		<!--		<item name="android:statusBarColor">@android:color/transparent</item>-->
 		<!--		<item name="android:statusBarColor">@color/colorAccent2</item>-->
 		<!--		<item name="android:windowTranslucentStatus">true</item>-->
 		<!--		<item name="android:windowTranslucentNavigation">true</item>-->
