--- a/SayTheWord/app/src/main/res/layout/fragment_juego.xml
+++ b/SayTheWord/app/src/main/res/layout/fragment_juego.xml
@@ -28,6 +28,16 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent">
 
+				<ImageView
+					android:id="@+id/ivCongratulations"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:src="@drawable/congratulation"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
 				<androidx.constraintlayout.widget.ConstraintLayout
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
