--- a/SayTheWord/app/src/main/res/menu/nav_options.xml
+++ b/SayTheWord/app/src/main/res/menu/nav_options.xml
@@ -5,6 +5,9 @@
 			android:id="@+id/it_listadoPalabras"
 			android:title="Listado Palabras" />
 		<item
+			android:id="@+id/it_listadoPalabrasProblematicas"
+			android:title="Listado Palabras Problemáticas" />
+		<item
 			android:id="@+id/it_juego"
 			android:title="Juego" />
 	</group>
