--- a/SayTheWord/app/src/main/res/values/colors.xml
+++ b/SayTheWord/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
 	<color name="colorPrimary">#008577</color>
 	<color name="colorPrimaryDark">#00574B</color>
-	<color name="colorAccent">#E40959</color>
+	<color name="colorAccent">#E8151C</color>
+	<color name="colorPalabraProblematica">#FD0006</color>
+	<color name="colorPalabraBuena">#ADADAD</color>
 </resources>
