--- a/SayTheWord/app/src/main/res/layout/recycler_view_item.xml
+++ b/SayTheWord/app/src/main/res/layout/recycler_view_item.xml
@@ -59,6 +59,7 @@
 					android:id="@+id/btMostrarRespuesta"
 					android:layout_width="30dp"
 					android:layout_height="30dp"
+					android:layout_marginTop="8dp"
 					android:insetLeft="0dp"
 					android:insetTop="0dp"
 					android:insetRight="0dp"
@@ -68,10 +69,27 @@
 					app:iconGravity="textStart"
 					app:iconPadding="0dp"
 					app:iconSize="25dp"
-					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent" />
+
+				<com.google.android.material.button.MaterialButton
+					android:id="@+id/btPalabraProblematicaListado"
+					android:layout_width="30dp"
+					android:layout_height="30dp"
+					android:layout_marginBottom="8dp"
+					android:insetLeft="0dp"
+					android:insetTop="0dp"
+					android:insetRight="0dp"
+					android:insetBottom="0dp"
+					app:backgroundTint="#ADADAD"
+					app:icon="@drawable/ic_smile"
+					app:iconGravity="textStart"
+					app:iconPadding="0dp"
+					app:iconSize="25dp"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent" />
 			</androidx.constraintlayout.widget.ConstraintLayout>
 
 			<androidx.constraintlayout.widget.ConstraintLayout
