--- a/SayTheWord/app/src/main/res/menu/nav_options.xml
+++ b/SayTheWord/app/src/main/res/menu/nav_options.xml
@@ -10,5 +10,8 @@
 		<item
 			android:id="@+id/it_juego"
 			android:title="Juego" />
+		<item
+			android:id="@+id/it_juegoPalabrasProblematicas"
+			android:title="Juego Palabras Problematicas" />
 	</group>
 </menu>
